avoid using Guava immutableList